--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="80ba84">  <td>23/10/05 15:56:27</td>   <td>0</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.VerifySearchFilePage@12cdcf4]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@681384962</td>   <td></td> </tr>
-<tr bgcolor="fed1b6">  <td>23/10/05 15:56:27</td>   <td>240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifySearchFilePage.beforeTest()[pri:0, instance:com.marina.tests.VerifySearchFilePage@12cdcf4]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@681384962</td>   <td></td> </tr>
-<tr bgcolor="fed1b6">  <td>23/10/05 15:56:39</td>   <td>12588</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifySearchFilePage.verifySearchFilePage_Test1()[pri:0, instance:com.marina.tests.VerifySearchFilePage@12cdcf4]">verifySearchFilePage_Test1</td> 
-  <td>main@681384962</td>   <td></td> </tr>
-<tr bgcolor="fed1b6">  <td>23/10/05 15:56:39</td>   <td>12627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifySearchFilePage.afterTest()[pri:0, instance:com.marina.tests.VerifySearchFilePage@12cdcf4]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@681384962</td>   <td></td> </tr>
-<tr bgcolor="80ba84">  <td>23/10/05 15:56:40</td>   <td>13537</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.VerifySearchFilePage@12cdcf4]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@681384962</td>   <td></td> </tr>
+<tr bgcolor="63cf88">  <td>23/10/24 11:05:34</td>   <td>0</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
+<tr bgcolor="a5a992">  <td>23/10/24 11:05:37</td>   <td>2398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifySuccessfulLogin.beforeTest()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
+<tr bgcolor="a5a992">  <td>23/10/24 11:06:13</td>   <td>38734</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifySuccessfulLogin.verifyLogin(java.lang.String, java.lang.String)[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">verifyLogin</td> 
+  <td>main@313239742</td>   <td></td> </tr>
+<tr bgcolor="a5a992">  <td>23/10/24 11:06:35</td>   <td>60477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifySuccessfulLogin.afterTest()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
+<tr bgcolor="a5a992">  <td>23/10/24 11:06:35</td>   <td>61299</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifySuccessfulLogin.beforeTest()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
+<tr bgcolor="a5a992">  <td>23/10/24 11:06:48</td>   <td>74109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifySuccessfulLogin.verifyLogin(java.lang.String, java.lang.String)[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">verifyLogin</td> 
+  <td>main@313239742</td>   <td></td> </tr>
+<tr bgcolor="a5a992">  <td>23/10/24 11:07:09</td>   <td>95110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifySuccessfulLogin.afterTest()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
+<tr bgcolor="a5a992">  <td>23/10/24 11:07:11</td>   <td>96984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifySuccessfulLogin.beforeTest()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
+<tr bgcolor="a5a992">  <td>23/10/24 11:07:23</td>   <td>109117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifySuccessfulLogin.verifyLogin(java.lang.String, java.lang.String)[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">verifyLogin</td> 
+  <td>main@313239742</td>   <td></td> </tr>
+<tr bgcolor="a5a992">  <td>23/10/24 11:07:25</td>   <td>111152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifySuccessfulLogin.afterTest()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
+<tr bgcolor="a5a992">  <td>23/10/24 11:07:26</td>   <td>111715</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifySuccessfulLogin.beforeTest()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
+<tr bgcolor="a5a992">  <td>23/10/24 11:07:38</td>   <td>123789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifySuccessfulLogin.verifySuccessLogin()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">verifySuccessLogin</td> 
+  <td>main@313239742</td>   <td></td> </tr>
+<tr bgcolor="a5a992">  <td>23/10/24 11:07:40</td>   <td>125407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifySuccessfulLogin.afterTest()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
+<tr bgcolor="63cf88">  <td>23/10/24 11:07:40</td>   <td>126226</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
 </table>
