--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,32 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="63cf88">  <td>23/10/24 11:07:40</td>   <td>0</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>23/10/24 11:06:35</td>   <td>-65749</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifySuccessfulLogin.afterTest()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>23/10/24 11:07:09</td>   <td>-31116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifySuccessfulLogin.afterTest()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>23/10/24 11:07:25</td>   <td>-15074</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifySuccessfulLogin.afterTest()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>23/10/24 11:07:40</td>   <td>-819</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifySuccessfulLogin.afterTest()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>23/10/24 11:05:37</td>   <td>-123828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifySuccessfulLogin.beforeTest()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>23/10/24 11:06:35</td>   <td>-64927</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifySuccessfulLogin.beforeTest()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>23/10/24 11:07:11</td>   <td>-29242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifySuccessfulLogin.beforeTest()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>23/10/24 11:07:26</td>   <td>-14511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifySuccessfulLogin.beforeTest()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
-<tr bgcolor="63cf88">  <td>23/10/24 11:05:34</td>   <td>-126226</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@313239742</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>23/10/24 11:06:13</td>   <td>-87492</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifySuccessfulLogin.verifyLogin(java.lang.String, java.lang.String)[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">verifyLogin</td> 
-  <td>main@313239742</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>23/10/24 11:06:48</td>   <td>-52117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifySuccessfulLogin.verifyLogin(java.lang.String, java.lang.String)[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">verifyLogin</td> 
-  <td>main@313239742</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>23/10/24 11:07:23</td>   <td>-17109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifySuccessfulLogin.verifyLogin(java.lang.String, java.lang.String)[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">verifyLogin</td> 
-  <td>main@313239742</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>23/10/24 11:07:38</td>   <td>-2437</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifySuccessfulLogin.verifySuccessLogin()[pri:0, instance:com.marina.tests.VerifySuccessfulLogin@53fdffa1]">verifySuccessLogin</td> 
-  <td>main@313239742</td>   <td></td> </tr>
+<tr bgcolor="97bc88">  <td>23/10/25 04:06:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.ST1_001()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@4d465b11]">ST1_001</td> 
+  <td>main@1022081840</td>   <td></td> </tr>
+<tr bgcolor="929eff">  <td>23/10/25 04:06:09</td>   <td>5365</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@4d465b11]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1022081840</td>   <td></td> </tr>
+<tr bgcolor="97bc88">  <td>23/10/25 04:06:04</td>   <td>197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@4d465b11]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@1022081840</td>   <td></td> </tr>
+<tr bgcolor="97bc88">  <td>23/10/25 04:05:04</td>   <td>-59469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@4d465b11]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@1022081840</td>   <td></td> </tr>
+<tr bgcolor="929eff">  <td>23/10/25 04:05:04</td>   <td>-60040</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@4d465b11]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1022081840</td>   <td></td> </tr>
 </table>
