verifylogin completed, all spaces tc 201,202 completed

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">64,849</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">68,478</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.marina.tests.Mod_2_SpaceTypes</td><td><a href="#m0">ST1_001</a></td><td rowspan="1">1698231964195</td><td rowspan="1">192</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.marina.tests.Mod_1_login</td><td><a href="#m0">lg_001_verifyLogin</a></td><td rowspan="1">1698243129768</td><td rowspan="1">14951</td></tr><tr class="passedodd"><td rowspan="2">com.marina.tests.Mod_2_SpaceTypes</td><td><a href="#m1">ST1_001_verifySpacePage</a></td><td rowspan="1">1698243145032</td><td rowspan="1">164</td></tr><tr class="passedodd"><td><a href="#m2">ST1_002_verifyPopupAddSpac</a></td><td rowspan="1">1698243175744</td><td rowspan="1">1078</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.marina.tests.Mod_2_SpaceTypes#ST1_001</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>test</h2><h3 id="m0">com.marina.tests.Mod_1_login#lg_001_verifyLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.marina.tests.Mod_2_SpaceTypes#ST1_001_verifySpacePage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.marina.tests.Mod_2_SpaceTypes#ST1_002_verifyPopupAddSpac</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
