--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>Mod_2_SpaceTypes.ST1_002_verifyPopupAddSpac()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@3f6b0be5]<br/></td></tr>
+<tr><td>regression,sanity,smoke</td><td>Mod_2_SpaceTypes.ST1_001_verifySpacePage()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@3f6b0be5]<br/>Mod_1_login.lg_001_verifyLogin()[pri:0, instance:com.marina.tests.Mod_1_login@3b6ddd1d]<br/></td></tr>
+</table>
