--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7cdd8a">  <td>23/10/05 16:46:17</td>   <td>0</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.VerifySearchFilePage@77ec78b9]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@633075331</td>   <td></td> </tr>
-<tr bgcolor="669c6a">  <td>23/10/05 16:46:16</td>   <td>-894</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifySearchFilePage.afterTest()[pri:0, instance:com.marina.tests.VerifySearchFilePage@77ec78b9]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-1@371349473</td>   <td></td> </tr>
-<tr bgcolor="669c6a">  <td>23/10/05 16:46:05</td>   <td>-12300</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifySearchFilePage.beforeTest()[pri:0, instance:com.marina.tests.VerifySearchFilePage@77ec78b9]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-1@371349473</td>   <td></td> </tr>
-<tr bgcolor="7cdd8a">  <td>23/10/05 16:46:05</td>   <td>-12541</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.VerifySearchFilePage@77ec78b9]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@633075331</td>   <td></td> </tr>
-<tr bgcolor="669c6a">  <td>23/10/05 16:46:16</td>   <td>-934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifySearchFilePage.verifySearchFilePage_Test1()[pri:0, instance:com.marina.tests.VerifySearchFilePage@77ec78b9]">verifySearchFilePage_Test1</td> 
-  <td>TestNG-test=test-1@371349473</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/25 07:12:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.ST1_001_verifySpacePage()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@3f6b0be5]">ST1_001_verifySpacePage</td> 
+  <td>TestNG-test=test-2@1763584734</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/25 07:12:55</td>   <td>30712</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.ST1_002_verifyPopupAddSpac()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@3f6b0be5]">ST1_002_verifyPopupAddSpac</td> 
+  <td>TestNG-test=test-2@1763584734</td>   <td></td> </tr>
+<tr bgcolor="a7c7e0">  <td>23/10/25 07:12:59</td>   <td>34677</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_1_login@3b6ddd1d]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="c288aa">  <td>23/10/25 07:12:24</td>   <td>-286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_1_login.afterTest()[pri:0, instance:com.marina.tests.Mod_1_login@3b6ddd1d]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-1@1300385317</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/25 07:12:25</td>   <td>167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@3f6b0be5]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1763584734</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/25 07:12:56</td>   <td>31794</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@3f6b0be5]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1763584734</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/25 07:11:51</td>   <td>-33787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@3f6b0be5]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1763584734</td>   <td></td> </tr>
+<tr bgcolor="c288aa">  <td>23/10/25 07:11:51</td>   <td>-33787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_1_login.beforeTest()[pri:0, instance:com.marina.tests.Mod_1_login@3b6ddd1d]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-1@1300385317</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/10/25 07:12:32</td>   <td>7803</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@3f6b0be5]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1763584734</td>   <td></td> </tr>
+<tr bgcolor="c288aa">  <td>23/10/25 07:12:09</td>   <td>-15264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_1_login.lg_001_verifyLogin()[pri:0, instance:com.marina.tests.Mod_1_login@3b6ddd1d]">lg_001_verifyLogin</td> 
+  <td>TestNG-test=test-1@1300385317</td>   <td></td> </tr>
+<tr bgcolor="a7c7e0">  <td>23/10/25 07:11:50</td>   <td>-34286</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_1_login@3b6ddd1d]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
 </table>
