Space form fill, fetch form remain

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,8 +11,9 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ST1_002_add_space</td>
-<td>&nbsp;</td></tr>
+<td>verifySpaceAfterAdd_TC_203</td>
+<td>regression,smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
