--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a5a992">  <td>23/10/25 05:36:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.ST1_002_add_space()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@383bfa16]">ST1_002_add_space</td> 
-  <td>main@505021446</td>   <td></td> </tr>
-<tr bgcolor="63cf88">  <td>23/10/25 05:36:54</td>   <td>3308</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@383bfa16]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@505021446</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>23/10/25 05:36:52</td>   <td>724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@383bfa16]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@505021446</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>23/10/25 05:36:25</td>   <td>-25544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@383bfa16]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@505021446</td>   <td></td> </tr>
-<tr bgcolor="63cf88">  <td>23/10/25 05:36:25</td>   <td>-26078</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@383bfa16]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@505021446</td>   <td></td> </tr>
+<tr bgcolor="80ba84">  <td>23/10/30 14:13:18</td>   <td>0</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_3_AllSpaces@12cdcf4]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@681384962</td>   <td></td> </tr>
+<tr bgcolor="fed1b6">  <td>23/10/30 14:13:16</td>   <td>-2091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_3_AllSpaces.afterTest()[pri:0, instance:com.marina.tests.Mod_3_AllSpaces@12cdcf4]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@681384962</td>   <td></td> </tr>
+<tr bgcolor="fed1b6">  <td>23/10/30 14:12:39</td>   <td>-39092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_3_AllSpaces.beforeTest()[pri:0, instance:com.marina.tests.Mod_3_AllSpaces@12cdcf4]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@681384962</td>   <td></td> </tr>
+<tr bgcolor="fed1b6">  <td>23/10/30 14:13:03</td>   <td>-14856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_3_AllSpaces.deleteNoteFromEditSpace_TC_412()[pri:0, instance:com.marina.tests.Mod_3_AllSpaces@12cdcf4]">deleteNoteFromEditSpace_TC_412</td> 
+  <td>main@681384962</td>   <td></td> </tr>
+<tr bgcolor="80ba84">  <td>23/10/30 14:12:39</td>   <td>-39346</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_3_AllSpaces@12cdcf4]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@681384962</td>   <td></td> </tr>
 </table>
